# gdc-claude-plugin

./: .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: project.md  tasks.md
commands/: gdc-apply.md  gdc-doc-from-task.md  gdc-link-task.md  gdc-login.md  gdc-my-tasks.md  gdc-switch.md  gdc-sync.md  gdc-task-from-doc.md  gdc-task-new.md  gdc-task.md  gdc-tasks.md  gdc-update.md
docs/: INDEX.md
docs/requests/: TEMPLATE.md
docs/requests/2026-06/: 20260626-171539-task-doc-flow-rules.md  20260629-181949-task-meta-step-filter.md
docs/requests/2026-07/: 20260706-165536-prod-server-switch.md  20260716-151731-sac-block-fix.md  20260720-150845-update-task-full-edit-fields.md  20260720-161506-list-customers-tool.md  20260720-164556-ship-update-command.md  20260721-095435-task-from-doc-improvement.md  20260721-112819-unify-html-description.md  20260721-113348-gdc-update-vscode-fix.md  20260722-151259-task-comment-tools.md  20260722-172518-doc-from-task-comment-reflect.md  20260723-094319-progress-round-to-10.md  20260723-111007-subtask-related-task-query.md  20260723-143718-task-edit-reflect-improvement.md  20260724-095833-task-hide-delete.md
gdc_mcp/: __init__.py  client.py  doc_utils.py  handoff.py  server.py  tokens.py
hooks/: hooks.json
tests/: test_description_html.py  test_doc_utils.py  test_task_edit.py  test_validation.py
